# AI-Kanban-Board

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py  mcp_server.py  scheduler.py
app/models/: chat.py  column.py  project.py  schedule.py  setting.py  task.py
app/routers/: agent.py  chat.py  columns.py  htmx.py  projects.py  reports.py  schedules.py  tasks.py
app/schemas/: chat.py  column.py  project.py  schedule.py  task.py
app/services/: agent_service.py  agno_agent.py  chat_service.py  column_service.py  project_service.py  report_service.py  schedule_service.py  task_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  board.html
app/templates/components/: board_content.html
app/tools/: __init__.py  kanban_tools.py
docs/: specification.md
