[project]
name = "kanban-agent"
version = "0.1.0"
description = "AI-powered kanban board for personal task management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.27",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "aiosqlite>=0.22.1",
    "agno>=2.6.4",
    "mcp>=1.27.0",
    "apscheduler>=3.11.2",
    "openai>=2.33.0",
    "anthropic>=0.97.0",
    "google-genai>=1.74.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
